getting bug in dark mode code!

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,4 +1,7 @@
+@import "../../style.scss";
+
 .navbar{
+    @include themify($themes){
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
@@ -6,7 +9,7 @@
     border-bottom: 1px solid lightgray;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: themed('bg');
     .left{
         display: flex;
         align-items: center;
@@ -52,9 +55,10 @@
                 object-fit: cover;
                 
             }
-            span{
+            // span{
 
-            }
+            // }
         }
     }
+}
 }
