--- a/src/style.scss
+++ b/src/style.scss
@@ -1,23 +1,3 @@
-$theme:(
-    light:(
-        textColor: #000,
-        bg: white,
-        logo: darkblue,
-        bgSoft: #f6f3f3,
-        textColorsoft: #555,
-        border: lightgray,
-    ),
-
-    dark:(
-        textColor: whitesmoke,
-        bg: #222,
-        logo: #333,
-        bgSoft: lightgray,
-        textColorsoft: #444,
-        border: #444,
-    )
-
-);
 
 $themes: (
   light: (
